RESOLVED FIXED291074
Math.hypot with 3 arguments fails ES6 math tests on ARMv7
https://bugs.webkit.org/show_bug.cgi?id=291074
Summary Math.hypot with 3 arguments fails ES6 math tests on ARMv7
Angelos Oikonomopoulos
Reported 2025-04-04 03:45:40 PDT
We get a slight difference in one of the results.
Attachments
Angelos Oikonomopoulos
Comment 1 2025-04-04 03:47:07 PDT
Specifically, ES6MathAPIs.js fails with: *** Running test #13 (12): hypot computes the square root of the sum of the squares of the arguments and follows spec on special boundary values Test threw exception: assert.areEqual failed: expected: 1.7320508075688772e+308 actual: 1.7320508075688774e+308: hypot(1e308, 1e308, 1e308) = 1.732e308 and shouldn't cause NaN from premature overflow
Angelos Oikonomopoulos
Comment 2 2025-04-04 03:53:20 PDT
Radar WebKit Bug Importer
Comment 3 2025-04-11 03:46:12 PDT
EWS
Comment 4 2025-04-25 14:04:42 PDT
Committed 294127@main (a06f333aa19d): <https://commits.webkit.org/294127@main> Reviewed commits have been landed. Closing PR #43633 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.