Math.hypot with 3 arguments fails ES6 math tests on linux/armv7 https://bugs.webkit.org/show_bug.cgi?id=291074

Reviewed by Yusuke Suzuki.

While Math.hypot(Math.hypot(a, b), c) is mathematically the same as
Math.hypot(a, b, c), in practice the calculation in libstdc++ ends up
slightly off. Use the 3-argument version instead.

AFAICT the libstdc++ implementation does not have the JS-expected
behavior with regard to NaNs, so explicitly check for that.

* Source/JavaScriptCore/runtime/MathObject.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/294127@main