Source/JavaScriptCore/runtime/MathObject.cpp
@@ -223,7 +223,17 @@ JSC_DEFINE_HOST_FUNCTION(mathProtoFuncHypot, (JSGlobalObject* globalObject, Call
         RETURN_IF_EXCEPTION(scope, { });
         if (std::isinf(arg0) || std::isinf(arg1) || std::isinf(arg2))
             return JSValue::encode(jsDoubleNumber(+std::numeric_limits<double>::infinity()));
+#if defined(_LIBCPP_VERSION) && _LIBCPP_VERSION < 200100
+        // For libc++ versions before 20.1 (commit 72825fd, "Fix undue
+        // overflowing of std::hypot(x,y,z)"), use hypot2. Unfortunately, that
+        // introduces an LSB difference in the result when using libstdc++ on at
+        // least x86_64 and ARMv7.
         return JSValue::encode(jsDoubleNumber(std::hypotl(std::hypotl(arg0, arg1), arg2)));
+#else
+        if (std::isnan(arg0) || std::isnan(arg1) || std::isnan(arg2))
+            return JSValue::encode(jsNaN());
+        return JSValue::encode(jsDoubleNumber(std::hypot(arg0, arg1, arg2)));
+#endif
     }
 
     Vector<double, 8> args(argsCount, [&](size_t i) -> std::optional<double> {
